Updated CV and added it to the website

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <p>I am deeply passionate about web development, with a focus on crafting responsive, high-performance websites that deliver exceptional user experiences 
         and utilize the latest industry technologies</p>
 
-      <a href="Ahtisham_Azhar_Resume.pdf" class="download-btn" download>Download CV</a>
+      <a href="Ahtisham_Azhar_CV.pdf" class="download-btn" download>Download CV</a>
       <div class="social-icons">
         <a href="https://www.linkedin.com/in/ahtishamazhar/"><i class="fab fa-linkedin"></i></a>
         <a href="https://github.com/AhtishamAzhar"><i class="fab fa-github"></i></a>
@@ -113,7 +113,7 @@
       </ul>
     </div>
     <br>
-    <a href="Ahtisham_Azhar_Resume.pdf" class="download-btn" download>Download Resume</a>
+    <a href="Ahtisham_Azhar_CV.pdf" class="download-btn" download>Download Resume</a>
 
   </section>
 
