--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <title>Professional Software Engineer Portfolio</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://unpkg.com/@coreui/icons/css/all.min.css" rel="stylesheet">
+
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -25,8 +27,11 @@
 
       <a href="Ahtisham_Azhar_CV.pdf" class="download-btn" download>Download CV</a>
       <div class="social-icons">
-        <a href="https://www.linkedin.com/in/ahtishamazhar/"><i class="fab fa-linkedin"></i></a>
-        <a href="https://github.com/AhtishamAzhar"><i class="fab fa-github"></i></a>
+        <a href="https://www.linkedin.com/in/ahtishamazhar/" target="_blank"><i class="fab fa-linkedin"></i></a>
+        <a href="https://github.com/AhtishamAzhar" target="_blank"><i class="fab fa-github"></i></a>
+        <a href="https://leetcode.com/u/AhtishamAzhar/" target="_blank"><i class="cib-leetcode"></i>
+      </a>
+      
       </div>
     </div>
     <div class="profile-container">
