add project1 Images

--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
     <h2 class="section-title">My Work</h2>
     <div class="portfolio-grid">
       <div class="portfolio-item">
-        <img src="https://via.placeholder.com/300" alt="Project 1">
-        <p>Project 1 - Amazing Website</p>
+        <img src="Expense_Tracker_Image.png" alt="Expense Tracker Website">
       </div>
+      
       <div class="portfolio-item">
         <img src="https://via.placeholder.com/300" alt="Project 2">
         <p>Project 2 - Mobile App</p>
@@ -141,7 +141,7 @@
   
 
   <footer class="footer">
-    <p>&copy; 2024 Ahtisham Azhar. All Rights Reserved. | <a href="#">Privacy Policy</a></p>
+    <p>&copy; 2025 Ahtisham Azhar. All Rights Reserved. | <a href="#">Privacy Policy</a></p>
   </footer>
 
   <script src="scripts.js"></script>
