--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
     <h2 class="section-title">My Work</h2>
     <div class="portfolio-grid">
       <div class="portfolio-item">
-        <img src="Expense_Tracker_Image.png" alt="Expense Tracker Website">
+        <a href="https://ahtishamazhar.github.io/Expense-Tracker/"><img src="Expense_Tracker_Image.png" alt="Expense Tracker Website">
+        </a>
       </div>
       
       <div class="portfolio-item">
